Added gitignore and updated folder name

--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "games"
   ],
   "author": "EMKBRO",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "mocha": "^7.2.0"
+  }
 }
