--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "An wrapper for GOG products",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ."
   },
   "keywords": [
     "GOG",
