--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gogproductwrapper",
   "version": "0.0.1",
   "description": "An wrapper for GOG API for retrivieing and managing products data",
-  "main": "index.js",
+  "main": "src/gogwrapper.js",
   "scripts": {
     "test": "mocha"
   },
