--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gog-product-wrapper",
   "version": "0.0.1",
-  "description": "An wrapper for GOG API for retrivieing and managing products data",
+  "description": "An wrapper for GOG API for retrieving and managing products data",
   "main": "src/gogwrapper.js",
   "scripts": {
     "test": "mocha"
